--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,17 +4,13 @@ version: '3.11'
 services:
   bot:
     build: .
+#    image: spiker007/exem:latest
     working_dir: /apps
     container_name: aiogram_bot
     environment:
       TOKEN: ${TOKEN}
-      DATABASE: postgres
-      DB_HOST: pg
-      DB_USER: postgres
-      DB_PORT: 5432
     command: python exem.py
-volumes:
-  pg_data:
+
 
 
 
